# fastapi-react-template

./: .db.env-example  .env-example  .gitignore  Dockerfile  README.md  cmd.sh  database.Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/routers/auth/: auth.py  models.py  utils.py
app/routers/utils/: utils.py
app/routers/utils/tests/: test_utils.py
app/utilities/: db.py
backend/: .env-example  Dockerfile  cmd.sh  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/auth/: auth.py  models.py  utils.py
backend/app/routers/utils/: models.py  utils.py
backend/app/routers/utils/tests/: test_utils.py
backend/app/utilities/: auth_utils.py  db.py  enums.py  logger.py  rate_limit.py  redis.py  static_values.py
database/: .env-example  mongo-init.sh
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: axiosInstance.ts
frontend/src/components/Dashboard/: Dashboard.tsx
frontend/src/components/Login/: Login.tsx
frontend/src/context/: AuthProvider.tsx  useAuth.ts
frontend/src/services/: authService.ts
nginx/: nginx.conf
