[tool.poetry]
name = "fastapi template"
version = "1.0.0"
description = "A scalable, optimized starter template with best practices for fast development and deployment."
authors = ["Yagnesh Vakharia <yagneshvakharia97@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yagnesh97/fastapi-template"
keywords = ["python", "fastapi", "template"]
package-mode = false

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/yagnesh97/fastapi-template/issues"

[tool.metadata]
title = "FastAPI Template"
full_description = """
FastAPI Template

📝 [Source Code](https://github.com/yagnesh97/fastapi-template)
🐞 [Issues](https://github.com/yagnesh97/fastapi-template/issues)
"""

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.115.3" }
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic-settings = "^2.6.0"
itsdangerous = "^2.2.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.7.0"
pytest = "^8.3.3"
coverage = "^7.6.4"
httpx = "^0.27.2"

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.fixable = ["ALL"]
exclude = [".git", ".mypy_cache", ".ruff_cache"]
line-length = 88

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_untyped_decorators = false
ignore_missing_imports = true
implicit_reexport = true
plugins = "pydantic.mypy"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
